# portalSimulator

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  portal-sim-agent-prompt.md  vcpkg.json
cmake/: clang-cl-asan-linker-flags.cmake
docs/: DECISIONS.md  PHYSICS.md  phase1-manifold-core.md  phase2-rendering.md
src/manifold/: CMakeLists.txt  chart.hpp  constants.hpp  holonomy.cpp  holonomy.hpp  portal.hpp  se3.cpp  se3.hpp  traverse.cpp  traverse.hpp
src/render/: CMakeLists.txt  acceleration_structure.cpp  acceleration_structure.hpp  camera.cpp  camera.hpp  constants.hpp  full_scene_gpu.cpp  full_scene_gpu.hpp  gpu_dispatch_common.cpp  gpu_dispatch_common.hpp  gpu_portal.hpp  image.hpp  light.hpp  persistent_gpu_renderer.cpp  persistent_gpu_renderer.hpp  portal_hop_gpu.cpp  portal_hop_gpu.hpp  portal_traverse_gpu.cpp  portal_traverse_gpu.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  triangle_mesh.hpp  triangle_query_gpu.cpp  triangle_query_gpu.hpp  vma_impl.cpp  vulkan_context.cpp  vulkan_context.hpp
src/render/shaders/: full_scene.slang  portal_common.slangh  portal_hop.slang  portal_traverse.slang  triangle_query.slang
tests/manifold/: CMakeLists.txt  test_holonomy.cpp  test_se3_closed_loop.cpp  test_traverse.cpp
tests/render/: CMakeLists.txt  test_acceleration_structure_smoke.cpp  test_corridor_brightness.cpp  test_corridor_render.cpp  test_gpu_vs_embree.cpp  test_portal_hop_gpu_differential.cpp  test_portal_traverse_gpu_differential.cpp  test_shadow_through_portal.cpp  test_vulkan_context_smoke.cpp
tools/: CMakeLists.txt  demo_scene.cpp  demo_scene_common.cpp  demo_scene_common.hpp  image_io.cpp  image_io.hpp  interactive_viewer.cpp  interactive_viewer_gpu.cpp
